[package]
name = "spraymanager-rs"
version = "0.1.0"
authors = ["deinferno <14363193+deinferno@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[profile.dev.package.'*']
opt-level = 3

[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"

[dependencies]
hmac-sha256 = "0.1.6"
serde = "1.0.124"
serde_json = "1.0.64"
serde_yaml = "0.8.17"

actix-rt = "2.1.0"
actix-web = {version = "3.3.2", default-features = false, features = ["rustls"]}
actix-ratelimit = {version = "0.3.1", default-features = false, features = ["memory"]}
# TODO: https://github.com/actix/actix-web/issues/2054
rust-tls = { package = "rustls", version = "0.18.1" }

env_logger = "0.8.3"
futures = "0.3.13"
log = "0.4.14"
crc32fast = "1.2.1"
json = "0.12.4"
ascii = "1.0.0"
hex = "0.4.3"